# portifolio-site

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
static/: script.js  style.css
templates/: index.html
